--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -10,11 +10,11 @@
     <meta name="author" content="">
 
     <title>NHS Nuclear Medicine Booking System</title>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
-    <script type = text/javascript src = js/jquery-2.1.3.min.js></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type=text/javascript src = "http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type=text/javascript src = "http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+    <link rel="stylesheet" href="/css/jquery-ui.css" />
+    <script type = "text/javascript" src = "/js/jquery-2.1.3.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script type=text/javascript src = "/js/jquery-1.9.1.js"></script>
+    <script type=text/javascript src = "/js/jquery-ui.js"></script>
 
     <script type = text/javascript>
         $(function() {
@@ -86,16 +86,16 @@
         </script>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/sb-admin.css" rel="stylesheet">
+    <link href="/css/sb-admin.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="css/plugins/morris.css" rel="stylesheet">
+    <link href="/css/plugins/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
