--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -8,6 +8,8 @@
         <meta name="author" content="">
         <title>NHS Nuclear Medicine Booking System | Appoinments</title>
 
+        <!-- test change -->
+
         <!-- Bootstrap Core CSS -->
         <link href="/css/bootstrap.min.css" rel="stylesheet">
 
