testfield/test-field

--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -5,7 +5,7 @@
 	<body>
 		<h1>Templating Test</h1>
 		<p>Templating test.</p>
-		<p>Test field: <!--[field: testfield]--></p>
+		<p>Test field: <!--[field: test-field]--></p>
 		<!--[if field: status]--><p>Status: <!--[field: status]--></p><!--[end if]-->
 	</body>
 </html>
