--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -6,6 +6,24 @@
 		<h1>Templating Test</h1>
 		<p>Templating test.</p>
 		<p>Test field: <!--[field: test-field]--></p>
-		<!--[if field: status]--><p>Status: <!--[field: status]--></p><!--[end if]-->
+		<!--[if field: status]--><p>Status: <!--[field: status]--></p><!--[/if]-->
+		<p>Collection test:</p>
+		<!--[collection: test-collection]-->
+		<!--[pre]-->
+		pr
+		<!--[/pre]-->
+
+		<!--[each]-->
+		ea
+		<!--[/each]-->
+
+		<!--[post]-->
+		po
+		<!--[/post]-->
+
+		<!--[empty]-->
+		em
+		<!--[/empty]-->
+		<!--[/collection]-->
 	</body>
 </html>
