Iterative half of collection looping

--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -10,19 +10,19 @@
 		<p>Collection test:</p>
 		<!--[collection: test-collection]-->
 		<!--[pre]-->
-		pr
+		<ul>
 		<!--[/pre]-->
 
 		<!--[each]-->
-		ea
+			<li>Item</li>
 		<!--[/each]-->
 
 		<!--[post]-->
-		po
+		</ul>
 		<!--[/post]-->
 
 		<!--[empty]-->
-		em
+		<p>Empty collection.</p>
 		<!--[/empty]-->
 		<!--[/collection]-->
 	</body>
