Added negated conditional field statements

--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -7,6 +7,7 @@
 		<p>Templating test.</p>
 		<p>Test field: <!--[field: test-field]--></p>
 		<!--[if field: status]--><p>Status: <!--[field: status]--></p><!--[/if]-->
+		<!--[if no field: status]--><p>No status set</p><!--[/if]-->
 		<p>Collection test:</p>
 		<!--[collection: test-collection]-->
 		<!--[pre]-->
