Implemented iteration ID and GUID

--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -11,20 +11,13 @@
 		<p>Collection test:</p>
 		<!--[collection: test-collection]-->
 		<!--[pre]-->
-		<ul>
-		<!--[/pre]-->
-
-		<!--[each]-->
-			<li><!--[field: name]--></li>
-		<!--[/each]-->
-
-		<!--[post]-->
-		</ul>
+		<ul><!--[/pre]-->
+			<!--[each]-->
+			<li><!--[index]-->: <!--[field: name]--> (GUID: <!--[guid]-->)</li>
+			<!--[/each]-->
+			<!--[post]--></ul>
 		<!--[/post]-->
-
-		<!--[empty]-->
-		<p>Empty collection.</p>
-		<!--[/empty]-->
+		<!--[empty]--><p>Empty collection.</p><!--[/empty]-->
 		<!--[/collection]-->
 	</body>
 </html>
