--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -10,14 +10,12 @@
 		<!--[if no field: status]--><p>No status set</p><!--[/if]-->
 		<p>Collection test:</p>
 		<!--[collection: test-collection]-->
-		<!--[pre]-->
-		<ul><!--[/pre]-->
-			<!--[each]-->
-			<li><!--[index]-->: <!--[field: name]--> (GUID: <!--[guid]-->)</li>
-			<!--[/each]-->
-			<!--[post]--></ul>
-		<!--[/post]-->
-		<!--[empty]--><p>Empty collection.</p><!--[/empty]-->
+			<!--[pre]--><ul><!--[/pre]-->
+				<!--[each]-->
+				<li><!--[index]-->: <!--[field: name]--> (GUID: <!--[guid]-->)</li>
+				<!--[/each]-->
+			<!--[post]--></ul><!--[/post]-->
+			<!--[empty]--><p>Empty collection.</p><!--[/empty]-->
 		<!--[/collection]-->
 	</body>
 </html>
