--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -203,7 +203,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">User Activity</h1>
-                        <table style = "width: 100%;" class = "userActivityInfo">
+                        <table style = "width: 100%;" class = "table table-striped">
                             <tr>
                                 <th>Username</th>
                                 <th>Timestamp</th>
