--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -5,14 +5,14 @@
 	<body>
 		<h1>Templating Test</h1>
 		<p>Templating test.</p>
-		<p>Test field: <!--[field: test-field]--></p>
-		<!--[if field: status]--><p>Status: <!--[field: status]--></p><!--[/if]-->
+		<p>Test field: #test-field</p>
+		<!--[if field: status]--><p>Status: #status</p><!--[/if]-->
 		<!--[if no field: status]--><p>No status set</p><!--[/if]-->
 		<p>Collection test:</p>
 		<!--[collection: test-collection]-->
 			<!--[pre]--><ul><!--[/pre]-->
 				<!--[each]-->
-				<li><!--[index]-->: <!--[field: name]--> (GUID: <!--[guid]-->)</li>
+				<li>#_index: #name (GUID: #_guid)</li>
 				<!--[/each]-->
 			<!--[post]--></ul><!--[/post]-->
 			<!--[empty]--><p>Empty collection.</p><!--[/empty]-->
