--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,9 +1,5 @@
 <!-- TODO: this is a basic mock-up to demo the templating tools -->
-<html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
+##_header.html
 		<form action="/login" method="post">
 			<!--[if field: message]-->
 			<p><strong>#message</strong></p>
@@ -20,5 +16,4 @@
 				<input type="submit" value="Login">
 			</p>
 		</form>
-	</body>
-</html>
+##_footer.html
