Implemented field definition in HTML

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,4 +1,5 @@
 <!-- TODO: this is a basic mock-up to demo the templating tools -->
+<!--[define: title = Login Page]-->
 ##_header.html
 		<form action="/login" method="post">
 			<!--[if field: message]-->
